1.2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed: Handling of internal links in wiki writer.


1.2rc1 - Monday 22 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.2beta1 - Monday 08 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed: Invalid font creation in haru driver.
- Fixed: Implementation of PDF wrapper class, to call correct renderer.
- Fixed: Implementation of style loading in PDF wrapper class.
- Implemented: Method to register additional PDF parts in wrapper class.
- Implemented: Global error reporting interface, now also used by the PDF
  renderer.
- Implemented: Maintain document location in all conversions, so that embedded
  files can be located.
- Fixed: Text blocks are continued on the same page wrapped images are
  rendered on.
- Fixed: Handle unescaped references containing special chars in RST parser.
- Fixed: Also recurse into section titles in RST visitor AST preprocessing to
  find all reference targets.
- Fixed: Ensure valid XML IDs in visitor.


1.2alpha1 - Tuesday 26 May 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented CSS based PDF rendering for basic docbook markup.


1.1.2 - Monday 30 March 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed: Parsing of lists inside simple table cells
- Fixed: Error reporting of document handlers were not used in converters
- Implemented #14075: Text roles support for RST
- Implemented #14403: Add support for replace-"directive".


1.1.1 - Monday 09 February 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14332: Paragraphs are sometimes missing in the output, when
  converting rst documents
- Fixed issue #14390: Items before first section are merged with first section